c/examples/writing-a-c-compiler-tests/tests/chapter_1/invalid_lex/backtick.c
/* A backtick is not a valid token. */
`